# Core

./: .travis.yml  AUTHORS  CMakeLists.txt  README  README.md  thebounty.spec
CMakeConfig/: .gitignore  CPackConfig.txt  UserConfig.template  UserConfig.txt  UserConfig_pov.template  UserConfig_pov.txt
CMakeModules/: FindOpenEXR.cmake  FindYafPythonLibs.cmake
include/: yafray_constants.h
include/cameras/: angularCamera.h  architectCamera.h  orthographicCamera.h  perspectiveCamera.h
include/core_api/: background.h  color.h  console_verbosity.h  environment.h  imagefilm.h  imagesplitter.h  integrator.h  light.h  material.h  mcintegrator.h  object3d.h  output.h  params.h  primitive.h  ray.h  sampling.h  scene.h  shader.h  surface.h  texture.h  tiledintegrator.h  vector3d.h  volume.h  yafsystem.h
include/gui/: yafqtapi.h
include/integrators/: bdpt.h  photonic.h  photonintegr.h  photonintegrGPU.h  sppm.h
include/interface/: xmlinterface.h  yafrayinterface.h
include/lights/: arealight.h
include/materials/: blendmat.h  maskmat.h  microfacet.h  roughglass.h  shinydiff.h  translucent.h
include/opencl_wrapper/: cl_base.h  cl_buffer.h  cl_context.h  cl_device.h  cl_error.h  cl_event.h  cl_image.h  cl_kernel.h  cl_main.h  cl_mem.h  cl_platform.h  cl_program.h  cl_queue.h  cl_source.h  cl_util.h  cl_wrapper.h
include/resources/: toolbar_alpha_icon.h  toolbar_cancel_icon.h  toolbar_colorbuffer_icon.h  toolbar_drawparams_icon.h  toolbar_quit_icon.h  toolbar_render_icon.h  toolbar_save_as_icon.h  toolbar_savedepth_icon.h  toolbar_show_alpha_icon.h  toolbar_z_buffer_icon.h  toolbar_zoomin_icon.h  toolbar_zoomout_icon.h  yafLogoTiny.h
include/textures/: basicnodes.h  basictex.h  layernode.h  noise.h
include/utilities/: geometry.h  mathOptimizations.h  math_utils.h  mcqmc.h  sample_utils.h  tiled_array.h  winunistd.h  y_alloc.h
include/yafraycore/: best_candidate.h  ccthreads.h  hashgrid.h  image.h  irradianceCache.h  kdtree.h  memoryIO.h  meshtypes.h  monitor.h  nodematerial.h  octree.h  photon.h  photonkdtree.h  pkdtree.h  ray_kdtree.h  scr_halton.h  spectrum.h  std_primitives.h  timer.h  triangle.h  triangle_inline.h  xmlparser.h
src/: CMakeLists.txt
src/backgrounds/: darksky.cc  gradientback.cc  sunsky.cc  textureback.cc
src/gui/: CMakeLists.txt  mywindow.cc  mywindow.h  qtoutput.cc  renderwidget.cc  renderwidget.h  windowbase.ui
src/integrators/: common.cc  (+14 more)
(+106 files in other folders)
